src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

@keyframes backgroundfadein {
  from {
    background-position-y: -1000px;
  }

  to {
    background-position-y: 0px;
  }
}

@keyframes elementfadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes hoverfade {
  from {
    background-color: rgba(179, 60, 133, 0);
  }

  to {
    background-color: rgba(179, 60, 133, 255);
  }
}

:root {
  color: white;
  background-size: 100% 300%;
  background-image: linear-gradient(var(--color4) 5%, black 35%);
  animation-name: backgroundfadein;
  animation-duration: 1.5s;
  animation-fill-mode: forwards;
  background-repeat: no-repeat;
  background-attachment: fixed;

  --color1: #EA638C;
  --color2: #b33c85;
  --color3: #190e4f;
  --color4: #03012C;
  --color5: #002A22;
  min-height: 100vh;
  min-width: 100vw;

  font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  scroll-behavior: smooth;
  background-color: black !important;
}

html {
  font-size: smaller;
}


#root {
  min-height: 100%;
  animation-name: elementfadein;
  animation-duration: 1.5s;
  animation-fill-mode: backwards;
  background-repeat: no-repeat;
  display: flex;
  justify-content: center;
}

#main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  max-width: 1200px;

  img {
    max-width: 75%;
  }
}

form {
  font-weight: 600;
  line-height: 2em;

  div {
    display: flex;
    justify-content: space-between;

    p {
      max-width: 15em;
      overflow: hidden;
      color: lime;
    }
  }

}

input,
textarea {
  box-sizing: border-box;
  display: block;
  width: 100%;
  padding: 0.4em;
  background-color: var(--color4);
  color: white;
  border: 1px solid var(--color3);
  resize: none;
  font-size: large;
  border-radius: 0.5em;
}

textarea {
  height: 5em;
  font-size: larger;
}

#contactme {
  width: 100%;
  box-sizing: border-box;
}

input[type=submit] {
  border: none;
  width: 7em;
  margin-left: auto;
  margin-top: 1em;
  font-size: large;
  border-radius: 1em;
  padding: 1em;
  display: inline;
}

input[type=submit]:disabled {
  background-color: #190e4f;
  cursor: default;
  filter: none;
}


input:focus,
textarea:focus {
  outline: 1px solid aqua;
}


section {
  min-height: 1000px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2em;
  padding-top: 6em;
}

.sectionbody {
  line-height: 1.5em;
  min-width: 50%;
  max-width: 75%;
  border: var(--color2) 1px solid;
  border-radius: 1em;
  padding: 2em;
  box-shadow: var(--color3) 5px 5px 5px 0px;
  background-image: linear-gradient(var(--color3) -100%, black 160%);
  margin-top: 2em;

  h3,
  li {
    margin: auto;
  }

  li {
    transition: color 0.5s;
    font-size: larger;
    margin: 1em;
  }

  li:hover {
    color: aqua;
  }
}

.projectcard {
  border-radius: 1em;
  background-image: linear-gradient(var(--color1) -100%, black 160%);
  filter: drop-shadow(4px 4px 4px #0f0f0f);
  height: 100%;
  transition: all 0.3s;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0em;

  h3 {
    font-size: larger;
  }

  p {
    font-weight: 500;
  }

  h3,
  p {
    max-width: 100%;
    text-align: left;
    margin: 0.5em 0em 0.5em 0em;
    overflow: hidden;
  }

  .desc {
    margin-top: 0px;
    margin-left: 1em;
    margin-bottom: 0px !important;
    height: 100%;
    padding: 0.5em;
    box-sizing: border-box;

    .hint {
      color: #AAAAAA;
      line-height: 1em;
    }
  }

  .projectlinks {
    margin-left: 1em;
    margin-bottom: 0px;
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    width: 100%;

    a {
      margin: none;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 28px;
      height: 28px;

      path {
        height: 100%;
      }
    }

    a:hover {
      color: aqua;
    }
  }

  img {
    margin-top: 1em;
    /* box-shadow: 2px 2px 1px black; */
    min-width: 100%;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 1em;
    box-sizing: border-box;
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
    border-top: 1px solid var(--color2);
    transition: all 0.5s;
  }

}

.projectcard:hover {
  filter: drop-shadow(8px 8px 8px #0f0f0f);
  transform: scale(1.05);
  background-image: linear-gradient(var(--color2) -100%, black 160%);
  overflow: hidden;
}

.two-column-layout-left,
.two-column-layout-right,
.two-column-layout {
  display: grid;
  align-items: center;
  justify-items: center;
  gap: 2em;
}

.two-column-layout-right {
  grid-template-columns: 0.5fr 1fr;
}

.two-column-layout-left {
  grid-template-columns: 1fr 0.5fr;
}

.two-column-layout {
  grid-template-columns: 1fr 1fr;
}

.triple-shadow {
  filter: drop-shadow(1vw -1vw 5px var(--color3)) drop-shadow(-1vw -1vw 5px var(--color1)) drop-shadow(1vw 1vw 5px var(--color5));
}

.cta {
  transition: background-color 0.5s, color 0.5s, filter 0.5s;
  background-color: var(--color2);
  color: black;
}

.cta:hover,
.cta:focus {
  background-color: aqua;
  cursor: grab;
  color: black;
  filter: drop-shadow(1px 1px 5px aqua);
  animation: none;
}

h1 {
  font-size: 4em;
  filter: drop-shadow(5px 5px 10px var(--color3));
  text-shadow: 1px 1px black;
  margin-bottom: 0.4em;
  margin-top: 2em;
}

h2 {
  margin-top: 0;
  margin-bottom: 5em;
  color: #727272;
  filter: drop-shadow(1px 1px 1px black) drop-shadow(5px 5px 100px var(--color1));
  font-weight: normal;
}

a {
  text-decoration: none;
  color: inherit;
  transition: color 0.5s;
}

h1 {
  a:hover {
    color: aqua;
  }
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em 0em 1em 0em;
  box-shadow: 0px 0px 10px 5px var(--color4);

  position: fixed;
  top: 0px;
  z-index: 1;
  width: 100%;

  background-image: linear-gradient(var(--color4));
  background-repeat: no-repeat;

  font-weight: 500;

  img {
    margin-left: 2.5em;
    max-width: 64px;
  }

  div {
    margin-right: 5em;
    min-height: 100%;
    padding: 1.5em;
  }

  a {
    padding: 1em;
    border-radius: 1em;
  }

  a:hover {
    background-color: var(--color2);
    filter: drop-shadow(0px 0px 5px var(--color2));
    animation: hoverfade 0.3s forwards ease-in;
    cursor: grab;
  }
}






@media screen and (max-width: 800px) {
  html {
    font-size: x-small;
  }

  nav {
    font-size: small;
    justify-content: center;

    div {
      margin-right: 0px;
    }


  }
}

@media screen and (max-width: 545px) {
  html {
    font-size: xx-small
  }

  section {
    padding-left: 1em;
    padding-right: 1em;
  }

  nav {
    justify-content: center;

    img {
      display: none;
    }
  }

  .two-column-layout,
  .two-column-layout-left,
  .two-column-layout-right {
    display: flex;
    flex-direction: column;
    align-items: center;

    div {
      margin-bottom: 0px;
      width: 100%
    }
  }

  img {
    max-width: 25% !important;
  }
}

@media screen and (max-width: 411px) {
  nav {
    padding-top: 0px;
    padding-bottom: 0px;
    font-size: 1em;
  }
}

